--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="https://kozakbartosz.github.io/Draft/draft.min.css"
-        />
-        <title>Vite App</title>
+        <title>Medieval</title>
     </head>
     <body>
         <div id="root"></div>
