Split screen test

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="root"></div>
         <div id="game-root"></div>
+        <div id="game-root-2"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
